landing.css
#menu-framer {
    top: 0;
    right: 0;
}

#menuslide-framer {
    position: fixed;
    height: 100%;
    right: 0;
    background-color: #263140;
    width: 0;
    z-index: 50;
    transition: width .5s ease-in-out, padding .5s ease-out;
    display: none;
}

#article-main {
    margin-bottom: 150px;
}

#btn-scroll-top {
    display: none;
    position: fixed;
    bottom: 30px;
    right: 50px;
    z-index: 50;
    border-width: 0;
    padding: 10px 12px;
    border-radius: 1000px;
}

#btn-scroll-top:hover {
    background-color: #555;
    cursor: pointer;
}

#div-main-side {
    position: relative;
    width: 100%;
}

#img-main-bg {
    width: 300px;
    position: absolute;
    right: 0;
    bottom: -20px;
    z-index: -1;
}

#img-sub-bg {
    background-image: url('assets/images/cat_looking_left.jpg');
    background-size: 100% auto;
    background-position: center;
    margin: 24px 0;
    max-width: 100%;
    width: 1000px;
    height: 300px;
    border-radius: 32px;
}

#subscribeinfo {
    width: 60%;
}

#section-catbg {
    background-image: url(assets/images/cat-background.jpg);
    background-size: 2000px auto;
    background-position: 30% 35%;
    background-color: white;
    width: 100%;
}

.img-hodu {
    height: 40px;
    width: auto;
    margin: 16px 0;
    align-self: flex-start;
}

.img-cat {
    width: 100%;
    aspect-ratio: 1;
    border-radius: 42px;
    object-fit: cover;
    margin: 12px 0;
}

.menu-horz-flex {
    display: flex;
    margin: 0;
    padding: 0;
    justify-content: center;
    list-style-type: none;
    overflow: hidden;
    gap: 20px;
}

.menu-vert-flex {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    justify-content: center;
    list-style-type: none;
    overflow: hidden;
    gap: 20px;
}

.menu-horz-flex li {
    align-self: center;
}

.menu-vert-flex li {
    align-self: flex-start;
    padding: 8px 60px;
}

.menu-horz-flex li > a {
    color: black;
    text-decoration: none;
}

.menu-vert-flex li > a {
    color: white;
    text-decoration: none;
}

.div-horz-flex  {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    place-content: space-between;
    gap: 32px;
}

.div-flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    grid-column: span 3;
    width: 100%;
}

.grid-item {
    column-span: 1;
    row-span: 1;
}

.div-grid {
    height: auto;
    display: grid;
    flex-direction: column;
    justify-content: space-between;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    transition: all .5s ease-in-out;
}

.div-popup-bg {
    background-color: rgba(0, 0, 0, 0.15);
    width: 100%;
    height: 100%;
    position: fixed;
    margin: auto;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 20;
    display: none;
}

.div-popup {
    width: 60%;
    max-width: 700px;
    border-radius: 32px;
    padding: 0 150px;
    margin: 100px auto;
    display: flex;
    flex-direction: column;
    align-content: center;
    transform: scale(0);
    transition: .6s opacity, .6s ease;
}

.article-popup {
    margin: 40px 0;
    background-color: white;
    border-radius: 32px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.btn-highlight {
    background: #D97652;
    border-radius: 30px;
    border-width: 0;
    margin: 16px 0;
    padding: 10px 24px;
    color: white;
    font-weight: 700;
    font-size: 16px;
}

.btn-highlight:hover {
    background: #db8a6d;
    cursor: pointer;
}

.btn-social {
    vertical-align: middle;
    background: #F29D52;
    border-radius: 1000px;
    margin: 0 0;
    padding: 5px 5px;
    width: 40px;
    height: 40px;
    border-width: 0;
}

.btn-social:hover {
    background: #D97652;
    cursor: pointer;
}

.div-framer {
    display: flex;
    flex-direction: column;
    text-align: center;
    width: 1300px;
    max-width: 70%;
    margin: auto;
    padding: 20px 0;
    gap: 16px;
}

.article-popout {
    position: relative;
    bottom: 170px;
    background: #263140;
    color: white;
    border-radius: 32px;
    padding: 32px 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.form-subscribe {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background: white;
    border-radius: 1000px;
    padding: 10px 10px;
    margin: 16px 0;
    flex: 0 1 auto;
}

.form-subscribe > input {
    border-width: 0;
    flex: 1 1 auto;
    font-size: 18px;
}

.form-subscribe > input:focus {
    outline: 0;
}

.form-subscribe > label {
    display: flex;
    justify-content: center;
    padding: 0 12px;
}

.form-subscribe > .btn-highlight {
    margin: 0 0;
    padding: 16px 24px;
    border-radius: 1000px;
}

/*
section, header, footer {
    display: flex;
    flex-direction: row;
}*/

.h2-main {
    font: 48px Kanit, sans-serif;
    font-weight: 500;
    margin-top: 100px;
}

.h2-sub {
    font: 32px Kanit, sans-serif;
    font-weight: 400;
    color: #D97652;
}

.h2-subscribe {
    font: 36px Kanit, sans-serif;
    font-weight: 500;
}

.p-small {
    color: #F2E9D8;
    font: 14px Kanit, sans-serif;
    font-weight: 400;
}

em {
    color: #D97652;
}

h2 {
    font: 48px Cattys, sans-serif;
    font-weight: 500;
    margin: 16px 0;
}

h1 {
    display: none;
}

p {
    font: 18px Kanit, sans-serif;
    margin: 8px 0;
}

table {
    table-layout: fixed;
    white-space: normal
}

.article-flex-center {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-content: center;
    align-self: center;
}

article {
    text-align: left;
}

span {
    text-wrap: nowrap;
    display: inline-block;
    padding: 0 4px;
}

header {
    background: #F2E9D8;
}

body {
    margin-top: 0;
    margin-bottom: 0;
    background: #F2E9D8;
    color: black;
}

@media screen and (max-width: 1200px) {
    #img-main-bg {
        position: relative;
        display: block;
        margin: auto;
    }
    
    #img-sub-bg {
        background-size: 400px auto;
    }

    #article-main {
        margin: 0;
    }

    #btnsubscribe {
        position: absolute;
        top: 70px;
        right: 0;
    }

    #subscribeinfo {
        width: 100%;
    }

    .form-subscribe {
        padding: 16px 10px;
        margin: 16px 0 100px 0;
    }
    
    .div-flex, .article-popout {
        flex-direction: column;
    }
}

@font-face {
    font-family: "Cattys";
    src: url('assets/fonts/Cattys-WyEnE.otf');
    format('opentype');
    font-weight: normal;
    font-style: normal;
}

@media screen and (max-width: 920px)
{
    #article-main {
        text-align: center;
    }
    
    #menu-framer {
        position: absolute;
        right: 50px;
    }

    #mainmenu {
        flex-direction: column;
    }

    #mainmenuicon_btn {
        border: none;
        background: none;
        padding: 8px 12px;
    }

    #mainmenuicon_btn:hover, #mainmenuicon_close {
        cursor: pointer;
    }

    #img-sub-bg {
        background-size: 650px auto;
        background-position-x: right;
    }

    #btnsubscribe {
        position: absolute;
        top: 70px;
        right: 0;
    }

    .menu-horz-flex {
        justify-content: flex-start;
        margin: 40px 0;
    }

    .div-grid {
        grid-template-columns: 1fr;
    }

    .div-horz-flex {
        flex-direction: column;
    }

    header {
        position: sticky;
        top: 0;
    }
}

